# crnetctl

./: Cargo.toml  LICENSE  README.md  REFACTORING_SUMMARY.md  SECURITY_AUDIT.md  SECURITY_FIXES_APPLIED.md  install.sh  uninstall.sh
.github/workflows/: issue-triage.yml
config/examples/: ethernet-dhcp.nctl  ethernet-static.nmconnection  vpn-arti.nctl  vpn-openvpn.nctl  vpn-openvpn.nmconnection  vpn-wireguard.nctl  wifi-dhcp.nctl  wifi-wpa.nctl  wifi-wpa.nmconnection
dbus/: org.crrouter.NetworkControl.conf  org.crrouter.NetworkControl.service
debian/: changelog
docs/: AP_SETUP.md  CONNECTION_MANAGEMENT.md  DBUS_TEST_GUIDE.md  DHCP_CLIENT_INTEGRATION.md  INSTALL_SYSTEMD.md  LIBCR_COMPAT_API.md  LIBNM_COMPAT_API.md  NETWORKMANAGER_COMPATIBILITY.md  PLAN_ALLOW_ROOT_OPS.md  SECURITY_FIXES_APPLIED.md  TOKIO_ANALYSIS.md  libnccli.md  nccli.md
examples/: dbus_test.rs  libcr_compat_example.rs  test_dbus_connection.rs
src/: config.rs  connection_config.rs  connection_manager.rs  dbus_integration.rs  debug.rs  dhcp.rs  dhcp_client.rs  dhcpm.rs  dns.rs  error.rs  hostapd.rs  interface.rs  lib.rs  libcr_compat.rs  link_monitor.rs  mod.rs  monitor.rs  network_monitor.rs  privilege_token.rs  routing.rs  validation.rs  wifi.rs  wpa_supplicant.rs
src/cr_dbus/: device.rs  dhcp.rs  integration.rs  mod.rs  network_control.rs  privilege.rs  types.rs  vpn.rs  wifi.rs
src/dbus/: mod.rs
src/dbus_client/: mod.rs
src/libcr_compat/: active_connection.rs  client.rs  connection.rs  enums.rs  ip_config.rs  settings.rs
src/libnm_compat/: access_point.rs  client.rs  device.rs
src/plugin/: bridge.rs  config.rs  loader.rs  manager.rs  mod.rs  openvpn.rs  traits.rs  tuntap.rs  vlan.rs  wireguard.rs
src/vpn/: arti.rs  backend.rs  common.rs  ipsec.rs  manager.rs  mod.rs  openvpn.rs  wireguard.rs
systemd/: README.md  netctl-auto@.service  netctl.service  netctl@.service  netctld.service
test/nccli/: run_tests.sh  test_ap.sh  test_dhcp_client.sh  test_helpers.sh  test_wifi.sh
tests/: README.md  README_HARDWARE_TESTING.md  dbus_comprehensive_test.rs  dbus_connectivity_test.rs  feature_integration_tests.rs  hardware_test_suite.sh  libnccli_integration_tests.rs  nccli_integration_tests.rs
