[package]
name = "netctl"
version = "0.1.0"
edition = "2021"
authors = ["CRRouter Team"]
description = "Network control tool with NetworkManager D-Bus compatibility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/netctl"
readme = "README.md"
keywords = ["network", "wifi", "networkmanager", "dbus"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "libnetctl"
path = "src/lib.rs"

[[bin]]
name = "nm-converter"
path = "src/bin/nm-converter.rs"

[[bin]]
name = "nccli"
path = "src/bin/nccli.rs"

[[bin]]
name = "netctld"
path = "src/bin/netctld.rs"

[[bin]]
name = "netctl-tor-server"
path = "src/bin/netctl-tor-server.rs"

[[example]]
name = "dbus_test"
path = "examples/dbus_test.rs"

[dependencies]
# Async runtime - optimized features only
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "time", "sync", "io-util", "net", "signal"] }
async-trait = "0.1"
futures = "0.3"  # Required for TryStreamExt used by rtnetlink

# CLI
clap = { version = "4.5", features = ["derive"] }

# System
libc = "0.2"  # For UID checks and other system calls

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
bincode = "1.3"

# Cryptography for privilege tokens
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

# D-Bus for NetworkManager compatibility
zbus = "5"
zvariant = "5"

# Network monitoring
rtnetlink = "0.18"
netlink-packet-route = "0.25"
netlink-packet-core = "0.8"
netlink-sys = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"  # Terminal detection for colored logging

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Optional: Dynamic plugin loading
libloading = { version = "0.9", optional = true }

# Optional: DHCP testing (not fully implemented)
# Removed for publishing - git dependencies not allowed
# dhcpm = { git = "https://github.com/leshow/dhcpm", default-features = false, optional = true }

# Optional: Tor via Arti
arti-client = { version = "0.36", optional = true }
tor-rtcompat = { version = "0.36", optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3"
serial_test = "3"

# Integration test helpers
assert_cmd = "2"
predicates = "3"

[features]
default = ["dbus-nm", "plugins"]
dbus-nm = []  # NetworkManager D-Bus compatibility
plugins = ["dep:libloading"]  # Dynamic plugin loading
vpn-tor = ["dep:arti-client", "dep:tor-rtcompat"]  # Tor VPN support via Arti (for netctld plugin)
# dhcp-testing = ["dep:dhcpm"]  # DHCP testing (incomplete implementation) - removed for publishing
full = ["plugins", "vpn-tor"]  # All optional features

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "CRRouter Team <team@crrouter.example>"
copyright = "2025, CRRouter Team"
license-file = ["LICENSE-MIT", "0"]
extended-description = """
Network control tool providing command-line interface for managing
network interfaces, WiFi, Access Points, DHCP, DNS, VPN, and routing.

Includes:
- netctld: Dedicated daemon with CR D-Bus interface (org.crrouter.NetworkControl)
- nccli: Command-line interface supporting both direct and D-Bus modes
- netctl: NetworkManager D-Bus compatibility for drop-in replacement
- nm-converter: Tool to convert NetworkManager profiles to netctl format

Supports WireGuard, OpenVPN, IPsec VPNs and WiFi hotspot functionality.
"""
depends = "$auto, iproute2, iw"
section = "net"
priority = "optional"
assets = [
    ["target/release/netctl", "usr/bin/", "755"],
    ["target/release/nccli", "usr/bin/", "755"],
    ["target/release/netctld", "usr/bin/", "755"],
    ["target/release/netctl-tor-server", "usr/bin/", "755"],
    ["target/release/nm-converter", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/netctl/", "644"],
    ["INSTALL_SYSTEMD.md", "usr/share/doc/netctl/", "644"],
    ["systemd/netctl.service", "lib/systemd/system/", "644"],
    ["systemd/netctld.service", "lib/systemd/system/", "644"],
    ["systemd/netctl@.service", "lib/systemd/system/", "644"],
    ["systemd/netctl-auto@.service", "lib/systemd/system/", "644"],
    ["systemd/netctl-tor-server.service", "lib/systemd/system/", "644"],
    ["systemd/README.md", "usr/share/doc/netctl/systemd/", "644"],
    ["dbus/org.crrouter.NetworkControl.conf", "etc/dbus-1/system.d/", "644"],
    ["dbus/org.crrouter.NetworkControl.service", "usr/share/dbus-1/system-services/", "644"],
    ["dbus/org.crrouter.NetworkControl.TorServer.conf", "etc/dbus-1/system.d/", "644"],
    ["dbus/org.crrouter.NetworkControl.TorServer.service", "usr/share/dbus-1/system-services/", "644"],
    ["config/examples/wifi-wpa.nctl", "usr/share/doc/netctl/examples/", "644"],
    ["config/examples/wifi-dhcp.nctl", "usr/share/doc/netctl/examples/", "644"],
    ["config/examples/ethernet-dhcp.nctl", "usr/share/doc/netctl/examples/", "644"],
    ["config/examples/ethernet-static.nctl", "usr/share/doc/netctl/examples/", "644"],
    ["config/examples/vpn-openvpn.nctl", "usr/share/doc/netctl/examples/", "644"],
    ["config/examples/vpn-arti.nctl", "usr/share/doc/netctl/examples/", "644"],
    ["config/examples/tor-server.toml", "usr/share/doc/netctl/examples/", "644"],
]
